--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Program Files\\Katana4.0v1\\bin\\python.exe"
+    "python.pythonPath": "C:\\Python37\\python.exe"
 }
